<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_disp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/main_disp_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8B4513"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/main_disp_guide_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#F5F5DC"
        android:text="@string/main_guide_comment"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="24sp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_weight="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >


            <Button
                android:id="@+id/button_0101"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/A_gyou"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_0102"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/K_gyou"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_0103"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/S_gyou"
                android:textSize="32sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_0201"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/T_gyou"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_0202"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/N_gyou"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_0203"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/H_gyou"
                android:textSize="32sp" />
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">

            <Button 
                android:id="@+id/button_0301"
                android:layout_width="wrap_content" 
                android:layout_height="match_parent" 
                android:layout_margin="1dp" 
                android:layout_weight="1" 
                android:background="@drawable/select_phonebutton_stateful" 
                android:onClick="pressedGyouButton" 
                android:padding="0dp" 
                android:text="@string/M_gyou" 
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_0302"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/Y_gyou"
                android:textSize="32sp" />

            <Button 
                android:id="@+id/button_0303" 
                android:layout_width="wrap_content" 
                android:layout_height="match_parent" 
                android:layout_margin="1dp" 
                android:layout_weight="1" 
                android:background="@drawable/select_phonebutton_stateful" 
                android:onClick="pressedGyouButton" 
                android:padding="0dp" 
                android:text="@string/R_gyou" 
                android:textSize="32sp" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_0402"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedAllDispButton"
                android:padding="0dp"
                android:text="@string/all_disp"
                android:textColor="#800000"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_0401"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedGyouButton"
                android:padding="0dp"
                android:text="@string/W_gyou"
                android:textSize="32sp" />

            <Button
                android:id="@+id/button_0403"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/select_phonebutton_stateful"
                android:onClick="pressedPreferenceButton"
                android:padding="0dp"
                android:text="@string/setting"
                android:textColor="#330000"
                android:textSize="28sp" />
        
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <ImageButton
            android:id="@+id/button_0503"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:background="@drawable/select_phonebutton_stateful"
            android:onClick="pressedVoiceButton"
            android:src="@drawable/voice" />

    </LinearLayout>

</LinearLayout>