<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/main_disp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/adress_detail_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8B4513"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_disp_guide_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#F5F5DC"
        android:text="@string/adress_detail_guide_comment"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/display_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8B4513"
        android:textSize="32dp" />
    
        <TextView
            android:id="@+id/dispName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#F5F5DC"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/phone_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#8B4513"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/dispPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#F5F5DC"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="32dp" /><Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/select_phonebutton_bar_staleful"
        android:drawableLeft="@drawable/phone"
        android:gravity="left|center_vertical"
        android:onClick="pressedDial"
        android:paddingLeft="60dp"
        android:text="@string/phone_call"
        android:textSize="32sp" />
        
</LinearLayout>



